feat: Protect google indexation

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +10,7 @@
     <meta name="keywords" content="food, ducks, duckhats, menu" />
     <meta name="author" content="Duckhats" />
     <meta name="copyright" content="Duckhats" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="index, follow" />
     <meta name="language" content="Catalan" />
     <meta name="revisit-after" content="7 days" />
